--- a/works.html
+++ b/works.html
@@ -26,10 +26,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-    background: #262525;
+    background: #262525 ;
     color: aliceblue;
 }
 
+body{
+  background: #262525 !important;
+}
 .navlist{
     display: flex;
     gap: 3.5rem;
@@ -87,7 +90,8 @@
 border: .1rem solid #5DB9EE;
 margin: auto !important;;
 font-size: 1.1rem;
-color: black;
+background-color: #5DB9EE;
+color: #fff;
 padding: .8rem 1.5rem;
 border-radius: .5rem;
 cursor: pointer;
@@ -249,7 +253,7 @@ transition: .5s ease;
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© Md. Shojib Talukder </p>
+        <p> </p>
       </div>
     </div>
   </div>
