Responsive added to my portfolio

--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@ body{
           </button>
   
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav" style="background-color: #262525">
             <li><a href="./index.html" title="Home" style="color: azure;">Home</a>
             </li>
             <li><a href="./works.html" title="" style="color: azure;">Projects</a></li>
