--- a/work5.html
+++ b/work5.html
@@ -69,7 +69,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav" style="background-color: #262525">
               <li>
                 <a href="./index.html" title="Home" style="color: azure"
                   >Home</a
