--- a/index.html
+++ b/index.html
@@ -226,11 +226,6 @@ button:nth-child(2):hover{
 
 
 @media screen and (max-width: 576px) {
-  .navlist a {
- 
-    font-size: 0.7rem;
-    
-}
 
 .left-container, .right-container{
  margin-top: 100px;
@@ -238,25 +233,25 @@ button:nth-child(2):hover{
 }
 
   .intro {
-    font-size: 0.6rem;
+    font-size: 0.6rem !important;
     }
 
   .content h1 {
-    font-size: 2rem;
+    font-size: 2rem !important;
     }
 
   .detail{
-    font-size: 0.6rem;
+    font-size: 0.6rem !important;
     
-    max-width: 38rem;
+    max-width: 38rem !important;
    
-    line-height: 0.9rem;
+    line-height: 0.9rem !important;
 }
 
 .btn-container button{
-border: .05rem solid #5DB9EE;
-font-size: 0.8rem;
-padding: .3rem .3rem;
+border: .05rem solid #5DB9EE !important;
+font-size: 0.8rem !important;
+padding: .3rem .3rem !important;
 
 
 
@@ -301,11 +296,6 @@ padding: .3rem .3rem;
 @media screen and (min-width:577px) and (max-width: 992px) {
   
  
-  .navlist a {
- 
- font-size: 0.9rem;
- 
-}
 
 .intro {
  font-size: 0.8rem;
