--- a/work.html
+++ b/work.html
@@ -115,7 +115,7 @@ body{
               <p style="text-align: center; font-size: medium;" >Web app for movie enthusiasts with exploration, lists, watch parties, and a vibrant community.</p>
             </blockquote>
   
-            <p><strong>Tools & technologies used:</strong>Tools & technologies used:</strong>PHP, JavaScript, Ajax, MySQL, HTML, CSS</p>
+            <p>Tools & technologies used:</strong>PHP, JavaScript, Ajax, MySQL, HTML, CSS</p>
             <ul>
               <li>Led a dynamic team of 4 developers in successfully delivering the entire project, encompassing features like
                 movie exploration, personal lists, watch parties, friendship features, and the innovative meme contest.</li>
