--- a/work1.html
+++ b/work1.html
@@ -116,7 +116,7 @@
             <p style="text-align: center; font-size: medium;" >SwiftEats is an intuitive and efficient food delivery platform.</p>
           </blockquote>
 
-          <p><strong>Tools & technologies used:</strong>Tools & technologies used:</strong>Next.js, Node.js, MongoDB, API, HTML, CSS</p>
+          <p><strong>Tools & technologies used:</strong>Next.js, Node.js, MongoDB, API, HTML, CSS</p>
           <ul>
             <li>It is an intuitive and efficient food delivery platform where restaurants, users, and delivery personnel come together.SwiftEats offers a seamless experience for food enthusiasts, restaurant owners, and delivery personnel.</li>
             <li>Restaurant Owners: Add, edit, and delete food items to manage their menu efficiently.</li>
