--- a/work2.html
+++ b/work2.html
@@ -114,7 +114,7 @@ body{
             <p style="text-align: center; font-size: medium;" >A dynamic web-based project designed to empower students, faculty, and administrators in showcasing, evaluating, and managing talents across the university.</p>
           </blockquote>
 
-          <p><strong style="color: #5DB9EE;">Tools & technologies used:</strong>PHP, JavaScript, MySQL, HTML, CSS</p>
+          <p><strong>Tools & technologies used:</strong>PHP, JavaScript, MySQL, HTML, CSS</p>
           <ul>
             <li>This Platform facilitates a streamlined process for students to upload creative content, faculties to evaluate and rate submissions, and administrators to oversee the entire system.</li>
             <li> It's a secure and feature-rich platform that promotes a competitive and collaborative spirit among students.</li>
