--- a/work4.html
+++ b/work4.html
@@ -166,7 +166,7 @@
               </blockquote>
 
               <p>
-                <strong style="color: #5db9ee"
+                <strong 
                   >Tools & technologies used:</strong
                 >PHP, Mysql, JavaScript, HTML, CSS
               </p>
