--- a/work5.html
+++ b/work5.html
@@ -164,7 +164,7 @@
               </blockquote>
 
               <p>
-                <strong style="color: #5db9ee"
+                <strong
                   >Tools & technologies used:</strong
                 >Java
               </p>
