--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@ width: 30%;
     color: white;
     max-width: 38rem;
     margin: 1.1rem 0 3rem 0;
-    line-height: 1.8rem;
+    line-height: 2.5rem;
 }
 
 .btn-container button{
 border: .1rem solid #5DB9EE !important;
-font-size: 1.1rem !important;
+font-size: 1.5rem !important;
 padding: .8rem 1.5rem !important;
 border-radius: .5rem !important;
 cursor: pointer !important;
@@ -228,9 +228,23 @@ button:nth-child(2):hover{
 @media screen and (max-width: 576px) {
 
 
+.left-container{
+
+   width: 90% !important;
+}
+
+.right-container{
+
+width: 10%;
+
+
+
+}
+
+
 
   .intro {
-    font-size: 1rem !important;
+    font-size: 1.2rem !important;
     }
 
   .content h1 {
@@ -240,9 +254,10 @@ button:nth-child(2):hover{
   .detail{
     font-size: 1rem !important;
     
-    max-width: 38rem !important;
+    max-width: 100% !important;
+    
    
-    line-height: 0.9rem !important;
+    line-height: 1.8rem !important;
 }
 
 .btn-container button{
@@ -291,6 +306,8 @@ padding: .3rem .3rem !important;
 }
 
 @media screen and (min-width:577px) and (max-width: 992px) {
+
+  
   
  
 
@@ -305,11 +322,12 @@ padding: .3rem .3rem !important;
 .detail{
  font-size: 1rem;
 
+
 }
 
 .btn-container button{
 border: .1rem solid #5DB9EE;
-font-size: 0.9rem;
+font-size: 1.4rem !important;
 padding: .2rem .5rem;
 border-radius: .5rem;
 
