--- a/about.html
+++ b/about.html
@@ -316,7 +316,7 @@
         .getElementById("openPdfButton")
         .addEventListener("click", function () {
           // Set the path to your PDF file
-          var pdfUrl = "MD__Shojib_Talukder.pdf"; // Replace with your actual PDF file path
+          var pdfUrl = "MD__Shojib_Talukder_RESUME.pdf"; // Replace with your actual PDF file path
 
           // Open the PDF in a new window/tab
           window.open(pdfUrl, "_blank");
